--- a/Client/App.xaml
+++ b/Client/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="Client.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Client"
-             StartupUri="EntranceWindow.xaml">
+             StartupUri="Views/EntranceWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
