--- a/Client/Views/MainWindow.xaml
+++ b/Client/Views/MainWindow.xaml
@@ -1,18 +1,14 @@
-﻿<Window x:Class="Client.letsTalkWindow"
+﻿<Window x:Class="Client.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:Controls ="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        xmlns:Icons ="http://metro.mahapps.com/winfx/xaml/iconpacks"
-        xmlns:local="clr-namespace:Client"
         xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
+        xmlns:icons ="http://metro.mahapps.com/winfx/xaml/iconpacks"
+        xmlns:controls ="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
         mc:Ignorable="d"
         Title="letsTalkWindow" Height="450" Width="800">
 
-    <Window.DataContext>
-        <local:MainViewModel />
-    </Window.DataContext>
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
             <i:InvokeCommandAction Command="{Binding LoadedWindowCommand}"/>
@@ -25,37 +21,33 @@
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="letsTalkControls/ButtonEllipseStyle.xaml"/>
+                <ResourceDictionary Source="/WindowResources/ButtonEllipseStyle.xaml"/>
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Window.Resources>
 
     <Grid>
-
         <Grid.Resources>
-            
-            <DataTemplate x:Key="HamburgerMenuOptionsTemplate" DataType="{x:Type Controls:HamburgerMenuIconItem}">
+            <DataTemplate x:Key="HamburgerMenuOptionsTemplate" DataType="{x:Type controls:HamburgerMenuIconItem}">
                 <DockPanel Height="48" LastChildFill="True">
-                    
                     <ContentControl  x:Name="IconPart"
-                                     Width="{Binding RelativeSource={RelativeSource AncestorType={x:Type Controls:HamburgerMenu}}, Path=CompactPaneLength}"
+                                     Width="{Binding ElementName=hamburgerMenu, Path=CompactPaneLength}"
                                      Content="{Binding Path=Icon}"
-                                     DockPanel.Dock="Left"
-                                     />
-                    
+                                     DockPanel.Dock="Left"/>
+
                     <TextBlock       x:Name="TextPart"
                                      VerticalAlignment="Center"
                                      FontSize="18"
                                      Text="{Binding Path=Label}" />
                 </DockPanel>
+
                 <DataTemplate.Triggers>
-                    <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type Controls:HamburgerMenu}}, Path=PanePlacement}" Value="Right">
+                    <DataTrigger Binding="{Binding ElementName=hamburgerMenu, Path=PanePlacement}" Value="Right">
                         <Setter TargetName="IconPart" Property="DockPanel.Dock" Value="Right" />
                         <Setter TargetName="TextPart" Property="Margin" Value="8 0 0 0" />
                     </DataTrigger>
                 </DataTemplate.Triggers>
             </DataTemplate>
-            
         </Grid.Resources>
 
         <Grid.ColumnDefinitions>
@@ -65,11 +57,11 @@
 
         <UserControl Grid.Column="1" Content="{Binding CurrentView}"/>
 
-        <Controls:HamburgerMenu x:Name="hamburgerMenu"  PaneBackground="#FFEF00" PaneForeground="Gray"
+        <controls:HamburgerMenu x:Name="hamburgerMenu"  PaneBackground="#FFEF00" PaneForeground="Gray"
                                  OptionsItemTemplate="{StaticResource HamburgerMenuOptionsTemplate}"
-                                 OptionsItemsSource="{Binding DataContext.OptionViewList, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"
-                                 IsPaneOpen="False"
-                                 >
+                                 OptionsItemsSource="{Binding Path=OptionViewList}"
+                                 IsPaneOpen="True">
+
             <i:Interaction.Triggers>
                 <i:EventTrigger EventName="OptionsItemClick">
                     <i:InvokeCommandAction Command="{Binding SelectedHambugerItemOptionCommand}"
@@ -100,32 +92,26 @@
                 </Controls:HamburgerMenuItemCollection>
             </Controls:HamburgerMenu.OptionsItemsSource>-->
 
-            <Controls:HamburgerMenu.HamburgerMenuHeaderTemplate>
+            <controls:HamburgerMenu.HamburgerMenuHeaderTemplate>
                 <DataTemplate>
-
                     <Grid>
-
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="64"/>
                             <ColumnDefinition Width="Auto"/>
                         </Grid.ColumnDefinitions>
 
-                        <Button Margin="10, 2" Grid.Column="0"
-                                Style="{StaticResource buttonEllipseStyle}">
-                        </Button>
+                        <Button Margin="10, 2" Grid.Column="0" Style="{StaticResource ButtonEllipseStyle}"/>
 
-                        <TextBlock Grid.Column="1" HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
+                        <TextBlock Grid.Column="1" 
+                                HorizontalAlignment="Center" VerticalAlignment="Center"
                                 FontSize="16"
                                 Foreground="Gray"
-                                Text="{Binding DataContext.clientUserInfo.UserName, RelativeSource={RelativeSource AncestorType={x:Type Window}}}"/>
-
+                                Text="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}, Path=DataContext.A}"/>
                     </Grid>
                 </DataTemplate>
-            </Controls:HamburgerMenu.HamburgerMenuHeaderTemplate>
+            </controls:HamburgerMenu.HamburgerMenuHeaderTemplate>
 
-            <Controls:HamburgerMenu.ContentTemplate>
-
+            <controls:HamburgerMenu.ContentTemplate>
                 <DataTemplate>
                     <Grid>
                         <Grid.RowDefinitions>
@@ -134,7 +120,6 @@
                         </Grid.RowDefinitions>
 
                         <Border Margin="-1 0 -1 0" Grid.Row="0">
-
                             <TextBlock Text="{Binding Path=Name}"
                                        HorizontalAlignment="Left"
                                        VerticalAlignment="Center"
@@ -142,11 +127,8 @@
                         </Border>
                     </Grid>
                 </DataTemplate>
-
-            </Controls:HamburgerMenu.ContentTemplate>
-
-        </Controls:HamburgerMenu>
+            </controls:HamburgerMenu.ContentTemplate>
+        </controls:HamburgerMenu>
 
     </Grid>
-
 </Window>
