--- a/Client/WindowResources/ButtonEllipseStyle.xaml
+++ b/Client/WindowResources/ButtonEllipseStyle.xaml
@@ -1,9 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:Icons ="http://metro.mahapps.com/winfx/xaml/iconpacks"
-                    xmlns:local="clr-namespace:Client.letsTalkControls">
+                    xmlns:Icons="http://metro.mahapps.com/winfx/xaml/iconpacks">
 
-    <Style x:Key="buttonEllipseStyle" TargetType="{x:Type Button}">
+    <Style x:Key="ButtonEllipseStyle" TargetType="{x:Type Button}">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Button}">
@@ -22,11 +21,11 @@
                                     </TransformGroup>
                                 </Icons:PackIconMaterial.RenderTransform>
                             </Icons:PackIconMaterial>
-                            
+
                             <Border.Background>
-                                <ImageBrush ImageSource="{Binding DataContext.clientUserInfo.UserImage, RelativeSource={RelativeSource AncestorType={x:Type Window}}}" Stretch="Fill"/>
+                                <ImageBrush ImageSource="{Binding RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Window}, Path=DataContext.ClientUserInfo.UserImage}" Stretch="Fill"/>
                             </Border.Background>
-                            
+
                         </Border>
 
                     </Grid>
