--- a/Client/WindowResources/ListBoxUsersStyle.xaml
+++ b/Client/WindowResources/ListBoxUsersStyle.xaml
@@ -1,29 +1,35 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
 
-    <Style x:Key="listBoxUsersStyle" TargetType="{x:Type ListBoxItem}">
+    <Style TargetType="{x:Type ListBoxItem}">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type ListBoxItem}">
-                    <Border>
-                        <Grid>
+                    <Border x:Name="border">
+                        <Grid Margin="10, 2" Height="50">
                             <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="1*"/>
-                                <ColumnDefinition Width="3*"/>
+                                <ColumnDefinition Width="50"/>
+                                <ColumnDefinition Width="*"/>
                             </Grid.ColumnDefinitions>
 
-                            <Ellipse Grid.Column="0">
-                                <Ellipse.Fill>
-                                    <ImageBrush ImageSource="{Binding DataContext.Users.Image,
-                                        RelativeSource={RelativeSource AncestorType={x:Type Window}}}" Stretch="Fill"/>
-                                </Ellipse.Fill>
-                            </Ellipse>
+                           <Border CornerRadius="25" BorderThickness="1" BorderBrush="Gray" Grid.Column="0">
+                                <Border.Background>
+                                    <ImageBrush ImageSource="{Binding Path=Image}" Stretch="Fill"/>
+                                </Border.Background>
+                            </Border>
 
-                            <TextBlock Grid.Column="1" Text="{Binding DataContext.Users.Name,
-                                RelativeSource={RelativeSource AncestorType={x:Type Window}}}"/>
+                            <TextBlock VerticalAlignment="Center" Margin="10, 0" Grid.Column="1" Text="{Binding Path=Name}"></TextBlock>
 
                         </Grid>
                     </Border>
+                    <ControlTemplate.Triggers>
+                        <Trigger Property="IsMouseOver" Value="True">
+                            <Setter TargetName="border" Property="Background" Value="DarkCyan" />
+                        </Trigger>
+                        <Trigger Property="IsSelected" Value="True">
+                            <Setter TargetName="border" Property="Background" Value="DarkGreen" />
+                        </Trigger>
+                    </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
